fix: Address maintainer feedback - YAML formatting, Property.of usage, HTTP client updates
- Fixed YAML example indentation throughout all task files
- Changed Property.ofValue to Property.of for consistency
- Updated HTTP client imports and usage patterns
- Added missing @NotNull annotations
- Fixed variable naming (fetchTypeValue -> rFetchType)
- Added proper java.net.http imports
- Resolved List import conflicts in class names
- Added maintainer feedback tracking document

Still needs: Kestra version compatibility fix, STORE implementation, QA screenshots